--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,10 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/relativeLayout">
+        android:id="@+id/relativeLayout"
+        android:layout_below="@+id/message_banner"
+        android:layout_alignRight="@+id/mySimpleXYPlot"
+        android:layout_alignEnd="@+id/mySimpleXYPlot">
 
     <TextView
         android:layout_width="wrap_content"
@@ -67,5 +69,15 @@
         android:textSize="20dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentLeft="true"/>
+
+    <com.androidplot.xy.XYPlot
+        android:id="@+id/mySimpleXYPlot"
+        android:layout_alignParentBottom="true"
+        android:layout_width="fill_parent"
+        android:layout_height="100px"
+        android:layout_marginLeft="10px"
+        android:layout_marginRight="10px"
+        androidPlot.title="A Simple XYPlot Example"
+        android:layout_below="@+id/relativeLayout" />
 
 </RelativeLayout>
