--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -64,6 +64,12 @@
                 android:layout_marginRight="10dp"
                 android:layout_gravity="center_horizontal" />
 
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/text_1"/>
+
             <com.androidplot.xy.XYPlot
                 android:id="@+id/plot_2"
                 android:layout_width="fill_parent"
@@ -72,6 +78,12 @@
                 android:layout_marginRight="10dp"
                 android:layout_gravity="center_horizontal" />
 
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/text_2"/>
+
             <com.androidplot.xy.XYPlot
                 android:id="@+id/plot_3"
                 android:layout_width="fill_parent"
@@ -79,6 +91,13 @@
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
                 android:layout_gravity="center_horizontal" />
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:id="@+id/text_3"/>
+
         </LinearLayout>
     </ScrollView>
 
